# nl2mongo-t5

./: .gitignore  README.md  docker-compose.yml  start_python_inference_api.sh
debug/: debug.ipynb
ml/: Fine tune T5 for NLQ to MLQ.ipynb  database_schema.txt  nlq2mlq_find_op_data_1138_linearized.json
mongo_db/: mongo-init.js
python_inference_api/: requirements.txt
python_inference_api/app/: main.py  model_loader.py  parser.py
rust_query_api/: Cargo.toml  Dockerfile
rust_query_api/src/: app_state.rs  main.rs  query_request.rs
rust_query_api/src/handlers/: query.rs
rust_query_api/src/models/: booking.rs  mod.rs  user.rs
rust_query_api/src/processing/: document_processor.rs  mod.rs
web_app/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
web_app/src/app/: layout.tsx  page.tsx
web_app/src/app/api/query/: route.ts
web_app/src/app/details/: page.tsx
web_app/src/app/details/[messageId]/: page.tsx
web_app/src/components/: SystemMessage.tsx  UserMessage.tsx
web_app/src/lib/: Message.ts
web_app/src/store/: messageStore.ts
