[package]
name = "rust_query_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
mongodb = { version = "2.8.2", features = ["tokio-runtime", "bson-chrono-0_4"] } 
bson = { version = "2.8.2", features = ["serde_with", "chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15" 
futures = "0.3"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }